force-app/main/default/objects/TPM_CustomMappings__mdt/TPM_CustomMappings__mdt.object-meta.xml
<CustomObject>
    <label>Custom Mapping</label>
    <pluralLabel>Custom Mappings</pluralLabel>
</CustomObject>