force-app/main/default/objects/TPM_CustomMappings__mdt/fields/TPM_Key__c.field-meta.xml
<CustomField>
    <fullName>TPM_Key__c</fullName>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>