force-app/main/default/objects/TPM_CustomMappings__mdt/fields/TPM_Sequence__c.field-meta.xml
<CustomField>
    <fullName>TPM_Sequence__c</fullName>
    <label>Sequence</label>
    <length>10</length>
    <type>Text</type>
</CustomField>