force-app/main/default/objects/TPM_CustomMappings__mdt/fields/TPM_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>TPM_Sequence_Number__c</fullName>
    <label>Sequence</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>