force-app/main/default/objects/TPM_CustomMappings__mdt/fields/TPM_Value__c.field-meta.xml
<CustomField>
    <fullName>TPM_Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>