force-app/main/default/objects/TPM_CustomMappings__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>TPM_ProcessName__c</columns>
    <columns>TPM_Key__c</columns>
    <columns>TPM_Value__c</columns>
    <columns>TPM_Sequence_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>